Version 0.9.3 -

- Add option to load into game with vanilla settings enabled by default
- Decrease minimimum LOD distances to 1


Version 0.9.2 -

- Add citizen visibility distance control


Version 0.9.1 -

- Rearrange options panel tabs
- Improve options panel slider value displays