@@ -1,7 +1,10 @@
+- Remove post-load RenderGroup refresh.
+
+
 Version 0.9.3 -
 
 - Add option to load into game with vanilla settings enabled by default
-- Decrease minimimum LOD distances to 1
+- Decrease minimum LOD distances to 1
 
 
 Version 0.9.2 -
